[package]
name = "autogrow"
version = "0.1.0"
authors = ["Michael House <mjhouse@protonmail.com>"]
repository = "https://github.com/mjhouse/autogrow"
license = "GPL-3.0-or-later"
readme = "README.md"
edition = "2018"

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"


[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "8ad1be6d95b075d13bca611d177a4cc8b9896d77"
features = ["arduino-nano"]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"